--- a/src/www/Css/Header.css
+++ b/src/www/Css/Header.css
@@ -41,7 +41,7 @@ header .logo h5 {
     text-decoration: none;
     padding: 2px 1.4rem;
     font-weight: bold;
-    font-family: 'Saira Condensed', sans-serif;
+    /* font-family: 'Saira Condensed', sans-serif; */
     font-size: 1.2rem;
     color: rgb(77, 77, 77);
 }
@@ -153,7 +153,7 @@ header .logo h5 {
 .sub-profile-wrap a.profile-link {
     margin-bottom: 1.2rem;
     text-decoration: none;
-    font-family: 'Saira Condensed', sans-serif;
+    /* font-family: 'Saira Condensed', sans-serif; */
     font-size: 1.2rem;
     color: #0063a5;
     font-weight: 500;
@@ -168,7 +168,7 @@ header .logo h5 {
 .sub-profile-wrap button.logout-btn {
     border: none;
     background-color: white;
-    font-family: 'Saira Condensed', sans-serif;
+    /* font-family: 'Saira Condensed', sans-serif; */
     font-size: 1.2rem;
     font-weight: 500;
     color: rgb(161, 2, 2);
